# ============================================================================
# CoronaEngine Tests
# ----------------------------------------------------------------------------
# Collect test suites contained in subdirectories. Each suite is expected to
# expose its own CMakeLists.txt that defines the test binaries and registers
# them with CTest.
# ============================================================================

add_subdirectory(framework)
